--- a/index.html
+++ b/index.html
@@ -14,23 +14,53 @@
     <!-- End of Navbar -->
     <!--Header -->
 <header class="header">
-    <div class="hero">
-        <h1 class="title">Kaali imow</h1>
-        <a href="#" class="hero-button pulsate">Book a Table </a>
+    <div class="container-fluid">
+        <div class="nav">
+            <a href="index.html" class="logo">
+                <img src="images/logo.jpg" alt="logo">
+            </a>
+            <div class="nav_button">
+                <span class="nav_icon"></span>
+            </div>
+            <ul class="nav-list">
+                <li class="nav-_item">
+                    <a href="#home" class="nav_link">Home</a>
+                </li>
+                <li class="nav-_tem">
+                    <a href="#about" class="nav_link">About Us</a>
+                </li>
+                <li class="nav-_tem">
+                    <a href="#team" class="nav_link">Our Team</a>
+                </li>
+                <li class="nav-_tem">
+                    <a href="#menu" class="nav_link">Menu</a>
+                </li>
+                <li class="nav-_tem">
+                    <a href="#reservation" class="nav_link">Reservation</a>
+                </li>
+            </ul>
+            <ul class="icons">
+                <li class="icon"> <i class="fas fa-search"></i></li>
+                <li class="icon"> <i class="fab fa-twitter"></i></li>
+                <li class="icon"> <i class="fab fa-facebook"></i></li>
+                <li class="icon"> <i class="fab fa-instagram"></i></li>
+            </ul>
+        </div>
     </div>
 </header>
-
-
-
-
-
-
-
-
-
-
-
-
-    <!--End of Header -->
+    <main>
+        <div class="hero" id="hero">
+            <div class="container">
+                <div class="premium_containter">
+                    <img class="premium" src="images/premium.jpg" alt="">
+                    <h3 class="quality">Quality Restaurant</h3>
+                </div>
+                <div class="restaurant-title">
+                    <h1 class="title">Welcome to Quruxlow</h1>
+                </div>
+            </div>
+            <a href="" class="go-top"> <i class="fas fa-arrow-up"></i></a>
+        </div>
+    </main>
 </body>
 </html>
