--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="hero" id="hero">
             <div class="container">
                 <div class="premium_containter">
-                    <img class="premium" src="images/premium.jpg" alt="">
+                    <img class="premium"  height="80" src="images/premium.jpg" alt="">
                     <h3 class="quality">Quality Restaurant</h3>
                 </div>
                 <div class="restaurant-title">
